updated docs with new information

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
