--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "highlight.js": "^11.10.0",
-    "vitepress": "^1.5.0"
+    "vitepress": "1.6.3"
   },
 
   "optionalDependencies": {
